--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  color-scheme: dark;
 }
 
 @theme inline {
@@ -12,15 +11,18 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* html {
+  @apply bg-gray-950 text-white transition-colors;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+/* html.light {
+  @apply bg-gray-100 text-gray-900;
+} 
+*/
+/* html {
+  @apply bg-gray-950 text-gray-100;
 }
+
+html.light {
+  @apply bg-white text-gray-900;
+} */
