--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,14 @@
   --font-mono: var(--font-geist-mono);
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* html {
   @apply bg-gray-950 text-white transition-colors;
 }
